--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Resume|Vikas-Kaushik</title>
+	<title>👨🏻‍💻 Vikas Kaushik 🌏</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="Vikas Kaushik resume 📄">
@@ -10,6 +10,25 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
+	<link rel="icon" href="./favicon.ico">
+
+	<meta name="Keywords"
+		content="Vikas Kaushik,Vikas,Kaushik,Software Engineer,MAIT Alumni,GGSIPU Alumni,lived in New Delhi,lived in Chandigarh,Information Technology,IT,Computer Science,ThoughtWorks,Programming,Vikas Kaushik resume,Maharaja Agrasen Institute of Technology,New Delhi,Guru Gobind Singh Indraprastha University" />
+	<meta name="Description"
+		content="I'm a software developer with an inherent zeal for quality and perfection. I got 8+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
+	<meta name="robots" content="index,follow" />
+	<meta name="googlebot" content="index,follow" />
+	<meta name="author" content="Vikas Kaushik" />
+	<meta name="language" content="english" />
+	<meta property="og:title"
+		content="I'm a software developer with an inherent zeal for quality and perfection. I got 8+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.kaushikvikas.com/" />
+	<meta property="og:image" content="./vikas_kaushik_og_image.jpg" />
+	<meta property="fb:admins" content="100000210027438" />
+	<meta property="og:description"
+		content="I'm a software developer with an inherent zeal for quality and perfection. I got 8+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
+
 </head>
 
 <body class="is-preload">
