Fix linkedIn link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					&nbsp;&mid;&nbsp; Micro-services &nbsp;&mid;&nbsp; REST</p>
 				<nav>
 					<ul>
-						<li><a href="https://www.linkedin.com/in/vk1990/" target="_blank"
+						<li><a href="https://www.linkedin.com/in/vikaushik/" target="_blank"
 								class="icon brands fab fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://github.com/vkaushik/" target="_blank" class="icon brands fa-github"><span
 									class="label">Github</span></a></li>
