--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 	<meta name="Keywords"
 		content="Vikas Kaushik,Vikas,Kaushik,Software Engineer,MAIT Alumni,GGSIPU Alumni,lived in New Delhi,lived in Chandigarh,Information Technology,IT,Computer Science,ThoughtWorks,Programming,Vikas Kaushik resume,Maharaja Agrasen Institute of Technology,New Delhi,Guru Gobind Singh Indraprastha University" />
 	<meta name="Description"
-		content="I'm a software developer with an inherent zeal for quality and perfection. I got 8+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
+		content="I'm a software developer with an inherent zeal for quality and perfection. I got 9+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
 	<meta name="robots" content="index,follow" />
 	<meta name="googlebot" content="index,follow" />
 	<meta name="author" content="Vikas Kaushik" />
 	<meta name="language" content="english" />
 	<meta property="og:title"
-		content="I'm a software developer with an inherent zeal for quality and perfection. I got 8+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
+		content="I'm a software developer with an inherent zeal for quality and perfection. I got 9+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.kaushikvikas.com/" />
 	<meta property="og:image" content="./vikas_kaushik_og_image.jpg" />
 	<meta property="fb:admins" content="100000210027438" />
 	<meta property="og:description"
-		content="I'm a software developer with an inherent zeal for quality and perfection. I got 8+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
+		content="I'm a software developer with an inherent zeal for quality and perfection. I got 9+ years of professional IT experience developing and designing scalable back-end systems in both product and services companies. A few keywords to highlight my tech-skills would be: Golang, C#, Git, Kafka, Docker, Linux, CI/CD, React-Redux, Agile, TDD, Microservices, Data Structures, SQL, System Design and Clean Code." />
 
 </head>
 
@@ -41,7 +41,7 @@
 			<header id="header">
 				<img src="assets/css/images/vikas.png" alt="Vikas Kaushik display pic" width="150" height="150">
 				<h1>Vikas Kaushik&nbsp;🌏</h1>
-				<p>Software Developer &nbsp;&bull;&nbsp; Full-Stack &nbsp;&bull;&nbsp; ThoughtWorks</p>
+				<p>Software Developer &nbsp;&bull;&nbsp; Full-Stack &nbsp;&bull;&nbsp; Walmart &nbsp;&bull;&nbsp; ThoughtWorks</p>
 				<p>Golang &nbsp;&mid;&nbsp; C# &nbsp;&mid;&nbsp; React.JS &nbsp;&mid;&nbsp; Git &nbsp;&mid;&nbsp; Docker
 					&nbsp;&mid;&nbsp; Kafka &nbsp;&mid;&nbsp; Linux &nbsp;&mid;&nbsp; SQL
 				</p>
