--- a/index.html
+++ b/index.html
@@ -341,6 +341,16 @@
                     <span>Cover-Letter </span>
                 </a>
             </span>
+            <span class="footer-link">
+                <a href="./resume-vikas-kaushik.pdf" class="no-external-icon">
+                    <span>PDF Resume </span>
+                </a>
+            </span>
+            <span class="footer-link">
+                <a href="./cover.pdf" class="no-external-icon">
+                    <span>PDF Cover-Letter </span>
+                </a>
+            </span>
         </span>
 
     </footer>
