--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h1 class="section-title">Skills <i class="fas fa-code"></i></h1>
                     <div class="item">
                         <dl>
-                            <dt>Keywords</dt><br />
+                            <dt>Keywords</dt>
                             <dd>
                                 <span>Golang</span>
                                 <span>C#</span>
@@ -127,7 +127,7 @@
                                 <span>GCP</span>
                                 <span>Azure</span>
                             </dd>
-                            <dt>Software Engg.</dt><br />
+                            <dt>Software Engg.</dt>
                             <dd>
                                 <span>Enterprise Microservices</span>
                                 <span>System Deisgn</span>
