Adjust text width

--- a/index.html
+++ b/index.html
@@ -109,21 +109,18 @@
                                 <span>Golang</span>
                                 <span>C#</span>
                                 <span>Kubernetes</span>
-                                <br/>
                                 <span>Site Reliability Engineering</span>
                                 <span>K8s Operator</span>
                                 <span>Prometheus</span>
                                 <span>Grafana</span>
                                 <span>Docker</span>
                                 <span>Kafka</span>
-                                <br/>
                                 <span>Git</span>
                                 <span>OAuth</span>
                                 <span>Linux</span>
                                 <span>SQL</span>
                                 <span>React-Redux</span>
                                 <span>Cassandra</span>
-                                <br/>
                                 <span>GCP</span>
                                 <span>Azure</span>
                             </dd>
@@ -131,7 +128,7 @@
                             <dd>
                                 <span>Enterprise Microservices</span>
                                 <span>System Deisgn</span>
-                                <span>Scalable and Reliable Systems</span>
+                                <span>Scalable & Reliable Systems</span>
                                 <span>Data Structures</span>
                                 <span>Algorithms & Complexity</span>
                                 <span>Design Patterns</span>
