--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                             </div>
                             <ul>
                                 <li>Worked with Site Reliability Engineering and Platform Team, responsible to design
-                                    and implement solutions at Walmart scale for hundreds or teams.</li>
-                                <li>Developed and maintained parts of telemtry services that ingest and store
+                                    and implement solutions at Walmart scale for different teams.</li>
+                                <li>Developed and maintained critical parts of telemtry services that ingest and store
                                     multi-million metrics per second in petabyte volumes.</li>
-                                <li>Developed and designed auto-scaling and anomaly-detection services.</li>
-                                <li>Delivered production grade enterprise microservices which are scalable and
+                                <li>Crafted auto-scaling and anomaly-detection services.</li>
+                                <li>Delivered production grade enterprise microservices that are scalable, reliable and
                                     maintanable. </li>
                                 <li>Implemented showback modules to quantify the telmetry platform usage by different
                                     teams in terms of dollar cost.</li>
@@ -73,9 +73,7 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Pune, India</span>
                             </div>
                             <ul>
-                                <li>Took complex projects from inception stage to successful delivery.</li>
-                                <li>Lead team of 5-10 engineers to design, develope and deliver fast-paced projects.
-                                </li>
+                                <li>Lead fast-paced complex projects from inception stage to successful delivery, including designing, development and hand-over.</li>
                                 <li>Designed and developed scalable data-pipeline using event-driven architecture, that
                                     processed, aggregated more than 2 million invoices per hour.</li>
                                 <li>Designed and devloped flawless user migration services that handled over 20k
@@ -83,7 +81,7 @@
                                 <li>Implemented responsive UI with Internationalization support using React-redux,
                                     Material UI,
                                     Jest.</li>
-                                <li>Worked with different clients i.e. Babyloan (UK), CXA (Singapore), Tesco (UK), IDFC.
+                                <li>Engaged with different clients i.e. Babyloan (UK), CXA (Singapore), Tesco (UK).
                                 </li>
                                 <li>Worked as a trainer to upskill new hire batches with agile practices,
                                     ways-of-working and ThorughtWorks cultur. Driven different workshops for colleagues.
@@ -131,7 +129,8 @@
                             <dd>
                                 <span>Enterprise Microservices</span>
                                 <span>System Deisgn</span>
-                                <span>Scalable and Reliable Systems</span>
+                                <span>Scalability</span>
+                                <span>Reliabililty</span>
                                 <span>Data Structures</span>
                                 <span>Algorithms & Complexity</span>
                                 <span>Design Patterns</span>
@@ -161,19 +160,24 @@
                     </div>
                     <div class="item">
                         <h2 class="item-title">M.S. in Computer Science</h2>
-                        <span>BITS Pilani, WILP (50% Done)</span>
+                        <span>BITS Pilani, WILP</span>
                         <br>
-                        <span>July 2016 - July 2017</span>
+                        <span>July 2016 - July 2017 <br/>(Two Semesters)</span>
                     </div>
                 </div>
 
-                <div class="section section-about">
-                    <h1 class="section-title">About Me <i class="fas fa-user"></i></h1>
-                    <p>I'm a Software Engineer with an inherent zeal for quality and got 10+ years of hands-on
-                        experience in
-                        designing and developing software systems. I like to be among empathetic intellectuals & first principle
-                        thinkers. I love to work in an environment that has high regard for inclusivity, diversity,
-                        creativity, sustainability and collaboration.</p>
+                <div class="section section-languages">
+                    <h1 class="section-title">Languages <i class="fas fa-language"></i></h1>
+                    <div class="item">
+                        <h2 class="item-title">English <span> - Professional</span>
+                        </h2>
+                    </div>
+                    <div class="item">
+                        <h2 class="item-title">Hindi <span> - Native</span>
+                        </h2>
+                        <!-- <li>IELTS: 8 bands</li>
+                        <li>TOEFL: 109 - 2021</li> -->
+                    </div>
                 </div>
 
             </div>
@@ -266,18 +270,13 @@
             <!-- RIGHT COLUMN P2 -->
             <div class="right-column right-column-page-2">
 
-                <div class="section section-languages left-column-page-2">
-                    <h1 class="section-title">Languages <i class="fas fa-language"></i></h1>
-                    <div class="item">
-                        <h2 class="item-title">English <span> - Professional</span>
-                        </h2>
-                    </div>
-                    <div class="item">
-                        <h2 class="item-title">Hindi <span> - Native</span>
-                        </h2>
-                        <!-- <li>IELTS: 8 bands</li>
-                        <li>TOEFL: 109 - 2021</li> -->
-                    </div>
+                <div class="section section-about left-column-page-2">
+                    <h1 class="section-title">About Me <i class="fas fa-user"></i></h1>
+                    <p>I'm a Software Engineer with an inherent zeal for quality and got 10+ years of hands-on
+                        experience in
+                        designing and developing software systems. I like to be among empathetic intellectuals & first principle
+                        thinkers. I love to work in an environment that has high regard for inclusivity, diversity,
+                        creativity, sustainability and collaboration.</p>
                 </div>
 
                 <div class="section section-skills ">
