add company details

--- a/index.html
+++ b/index.html
@@ -49,16 +49,19 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
-                                <li>Worked with Site Reliability Engineering and Platform Team, responsible to design
+                                <li>Walmart handles over 2.5 petabytes of data every hour, providing unparalleled scale and complexity in its backend operations that serves over 200 million customers each week,
+                                    daily deploying +100,000 lines of code, working on private, public and hybrid clouds,
+                                </li>
+                                <li>I work with Site Reliability Engineering and Platform Team, responsible to design
                                     and implement solutions at Walmart scale for different teams.</li>
                                 <li>Developed and maintained critical parts of telemtry services that ingest and store
                                     multi-million metrics per second in petabyte volumes.</li>
-                                <li>Crafted auto-scaling and anomaly-detection services.</li>
+                                <li>Crafted crucial parts of auto-scaling and anomaly-detection services.</li>
                                 <li>Delivered production grade enterprise microservices that are scalable, reliable and
                                     maintanable. </li>
                                 <li>Implemented showback modules to quantify the telmetry platform usage by different
                                     teams in terms of dollar cost.</li>
-                                <li>Tech-stack: golang, kubernetes, GCP, Kafka, operators, SRE, Devops, prometheus,
+                                <li><b>Tech-stack:</b> golang, kubernetes, GCP, Kafka, operators, SRE, Devops, prometheus,
                                     grafana, M3, Multi-cloud, DR.</li>
                             </ul>
                         </div>
@@ -73,8 +76,9 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Pune, India</span>
                             </div>
                             <ul>
+                                <li>ThoughtWorks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.</li>
                                 <li>Lead fast-paced complex projects from inception stage to successful delivery, including designing, development and hand-over.</li>
-                                <li>Designed and developed scalable data-pipeline using event-driven architecture, that
+                                <li>Designed and developed scalable ETL data-pipeline using event-driven architecture, that
                                     processed, aggregated more than 2 million invoices per hour.</li>
                                 <li>Designed and devloped flawless user migration services that handled over 20k
                                     distributed Tx (saga) per hour.</li>
@@ -86,7 +90,7 @@
                                 <li>Worked as a trainer to upskill new hire batches with agile practices,
                                     ways-of-working and ThorughtWorks cultur. Driven different workshops for colleagues.
                                 </li>
-                                <li>Tech-stack: golang, kubernetes, Kafka, Kafka-Streams, Java-Spring-Webflux,
+                                <li><b>Tech-stack:</b> golang, kubernetes, Kafka, Kafka-Streams, Java-Spring-Webflux,
                                     React-Redux, Oauth, Ansible, Jenkins, CI/CD, Git. </li>
 
                             </ul>
@@ -98,6 +102,15 @@
 
             <!-- RIGHT COLUMN P1 -->
             <div class="right-column">
+                <div class="section section-about">
+                    <h1 class="section-title">About <i class="fas fa-user"></i></h1>
+                    <p>I'm a Software Engineer with an inherent zeal for quality and got 10+ years of hands-on
+                        experience in
+                        designing and developing software systems. I like to be among empathetic intellectuals & first principle
+                        thinkers. I love to work in an environment that has high regard for inclusivity, diversity,
+                        creativity, sustainability and collaboration.</p>
+                </div>
+
                 <div class="section section-skills">
                     <h1 class="section-title">Skills <i class="fas fa-code"></i></h1>
                     <div class="item">
@@ -109,21 +122,16 @@
                                 <span>Kubernetes</span>
                                 <br/>
                                 <span>Site Reliability Engineering</span>
-                                <span>K8s Operator</span>
                                 <span>Prometheus</span>
-                                <span>Grafana</span>
+                                <span>K8s Operator</span>
                                 <span>Docker</span>
                                 <span>Kafka</span>
+                                <span>Grafana</span>
                                 <br/>
-                                <span>Git</span>
                                 <span>OAuth</span>
                                 <span>Linux</span>
                                 <span>SQL</span>
-                                <span>React-Redux</span>
-                                <span>Cassandra</span>
-                                <br/>
-                                <span>GCP</span>
-                                <span>Azure</span>
+                                <span>Git</span>
                             </dd>
                             <dt>Software Engg.</dt>
                             <dd>
@@ -166,19 +174,7 @@
                     </div>
                 </div>
 
-                <div class="section section-languages">
-                    <h1 class="section-title">Languages <i class="fas fa-language"></i></h1>
-                    <div class="item">
-                        <h2 class="item-title">English <span> - Professional</span>
-                        </h2>
-                    </div>
-                    <div class="item">
-                        <h2 class="item-title">Hindi <span> - Native</span>
-                        </h2>
-                        <!-- <li>IELTS: 8 bands</li>
-                        <li>TOEFL: 109 - 2021</li> -->
-                    </div>
-                </div>
+
 
             </div>
         </div>
@@ -203,6 +199,7 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Gurugram, India</span>
                             </div>
                             <ul>
+                                <li>Ciena (NYSE:CIEN) is a global leader in optical and routing systems, services, and automation software. </li>
                                 <li>Developed and enhanced an existing product - Blueplanet for clients: AT&T, Facebook
                                     (USA)</li>
                                 <li>Significant contribution towards feature implementation, Rest API Development,
@@ -212,7 +209,7 @@
                                     enables
                                     true
                                     end-to-end service orchestration and SDN software suite for optical networks.</li>
-                                <li>Tech-stack: C#, .Net core, Docker, Cassandra, Kafka, Git</li>
+                                <li><b>Tech-stack:</b> C#, .Net core, Docker, Cassandra, Kafka, Git</li>
                             </ul>
                         </div>
                     </div>
@@ -226,6 +223,7 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
+                                <li>Optym have applied optimization & AI algorithms to some of the largest transportation companies including top railroads and airlines.</li>
                                 <li>Improved the API SLAs 5 times by implementing streaming and bug fixes. </li>
                                 <li>Developed application Middle Layer including REST APIs, caching strategy and
                                     asynchronous processing. Implemented concepts like AOP, DI, Lazy evaluation.</li>
@@ -236,7 +234,7 @@
                                     network
                                     planners, and central dispatchers to create better linehaul schedules and shipment
                                     routes.</li>
-                                <li>Tech-stack: C#, .Net, MS SQL, SVN, Agile, Ninject, LINQ, Postsharp, NUnit.</li>
+                                <li><b>Tech-stack:</b> C#, .Net, MS SQL, SVN, Agile, Ninject, LINQ, Postsharp, NUnit.</li>
 
                             </ul>
                         </div>
@@ -251,6 +249,7 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Chandigarh, India</span>
                             </div>
                             <ul>
+                                <li>Infosys (NYSE: INFY) is well-known MNC known for it's IT Solutions and Services, Consulting, Business Process Outsourcing, Products and Platforms, Engineering Services.</li>
                                 <li>Enhanced Report Generation module for BASEL-3 and bug fixes.</li>
                                 <li>Worked on Data Warehousing project in which report generation is done after complex
                                     ETL process.</li>
@@ -259,7 +258,7 @@
                                     Pay
                                     Project (SOP), Three Amex applications i.e. Project uplift, NIT 2.0, ACH Gateway,
                                     BOP</li>
-                                <li>Tech-stack: Mainframe, COBOL, MS-SQL, Linux, Perl, HTML, CSS, Js</li>
+                                <li><b>Tech-stack:</b> Mainframe, COBOL, MS-SQL, Linux, Perl, HTML, CSS, Js</li>
                             </ul>
                         </div>
                     </div>
@@ -270,13 +269,18 @@
             <!-- RIGHT COLUMN P2 -->
             <div class="right-column right-column-page-2">
 
-                <div class="section section-about left-column-page-2">
-                    <h1 class="section-title">About Me <i class="fas fa-user"></i></h1>
-                    <p>I'm a Software Engineer with an inherent zeal for quality and got 10+ years of hands-on
-                        experience in
-                        designing and developing software systems. I like to be among empathetic intellectuals & first principle
-                        thinkers. I love to work in an environment that has high regard for inclusivity, diversity,
-                        creativity, sustainability and collaboration.</p>
+                <div class="section section-languages left-column-page-2">
+                    <h1 class="section-title">Languages <i class="fas fa-language"></i></h1>
+                    <div class="item">
+                        <h2 class="item-title">English <span> - Professional</span>
+                        </h2>
+                    </div>
+                    <div class="item">
+                        <h2 class="item-title">Hindi <span> - Native</span>
+                        </h2>
+                        <!-- <li>IELTS: 8 bands</li>
+                        <li>TOEFL: 109 - 2021</li> -->
+                    </div>
                 </div>
 
                 <div class="section section-skills ">
