--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                                 <li>Walmart handles over 2.5 petabytes of data every hour, providing unparalleled scale and complexity in its backend operations that serves over 200 million customers each week,
                                     daily deploying +100,000 lines of code, working on private, public and hybrid clouds,
                                 </li>
-                                <li>I work with Site Reliability Engineering and Platform Team, responsible to design
-                                    and implement solutions at Walmart scale for different teams.</li>
-                                <li>Developed and maintained critical parts of telemtry services that ingest and store
+                                <li>I work with Site Reliability Engineering and Platform Team, responsible for designing
+                                    and implementing solutions at Walmart scale for different teams.</li>
+                                <li>Developed and maintained critical parts of telemetry services that ingest and store
                                     multi-million metrics per second in petabyte volumes.</li>
                                 <li>Crafted crucial parts of auto-scaling and anomaly-detection services.</li>
                                 <li>Delivered production grade enterprise microservices that are scalable, reliable and
-                                    maintanable. </li>
-                                <li>Implemented showback modules to quantify the telmetry platform usage by different
+                                    maintainable. </li>
+                                <li>Implemented showback modules to quantify the telemetry platform usage by different
                                     teams in terms of dollar cost.</li>
                                 <li><b>Tech-stack:</b> golang, kubernetes, GCP, Kafka, operators, SRE, Devops, prometheus,
                                     grafana, M3, Multi-cloud, DR.</li>
@@ -78,17 +78,17 @@
                             <ul>
                                 <li>ThoughtWorks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.</li>
                                 <li>Lead fast-paced complex projects from inception stage to successful delivery, including designing, development and hand-over.</li>
-                                <li>Designed and developed scalable ETL data-pipeline using event-driven architecture, that
+                                <li>Designed and developed a scalable ETL data-pipeline using event-driven architecture that
                                     processed, aggregated more than 2 million invoices per hour.</li>
-                                <li>Designed and devloped flawless user migration services that handled over 20k
+                                <li>Designed and developed flawless user migration services that handled over 20k
                                     distributed Tx (saga) per hour.</li>
-                                <li>Implemented responsive UI with Internationalization support using React-redux,
+                                <li>Implemented responsive UI with Internationalisation support using React-redux,
                                     Material UI,
                                     Jest.</li>
                                 <li>Engaged with different clients i.e. Babyloan (UK), CXA (Singapore), Tesco (UK).
                                 </li>
                                 <li>Worked as a trainer to upskill new hire batches with agile practices,
-                                    ways-of-working and ThorughtWorks cultur. Driven different workshops for colleagues.
+                                    ways-of-working and ThoughtWorks culture. Driven different workshops for colleagues.
                                 </li>
                                 <li><b>Tech-stack:</b> golang, kubernetes, Kafka, Kafka-Streams, Java-Spring-Webflux,
                                     React-Redux, Oauth, Ansible, Jenkins, CI/CD, Git. </li>
@@ -136,9 +136,9 @@
                             <dt>Software Engg.</dt>
                             <dd>
                                 <span>Enterprise Microservices</span>
-                                <span>System Deisgn</span>
+                                <span>System Design</span>
                                 <span>Scalability</span>
-                                <span>Reliabililty</span>
+                                <span>Reliability</span>
                                 <span>Data Structures</span>
                                 <span>Algorithms & Complexity</span>
                                 <span>Design Patterns</span>
@@ -205,7 +205,7 @@
                                 <li>Significant contribution towards feature implementation, Rest API Development,
                                     refactoring and
                                     bug fixing in a domain heavy context.</li>
-                                <li>Project: Blue Planet is a container-based micro-services software architecture that
+                                <li>Project: Blue Planet is a container-based microservices software architecture that
                                     enables
                                     true
                                     end-to-end service orchestration and SDN software suite for optical networks.</li>
@@ -229,8 +229,8 @@
                                     asynchronous processing. Implemented concepts like AOP, DI, Lazy evaluation.</li>
                                 <li>Worked in a startup environment along with Operation Research Scholars.</li>
                                 <li>Project: HaulPLAN (Clients: FedEx, ABF, SAIA, YRCF - USA): HaulPLAN is
-                                    revolutionizing how less than truckload shipping (LTL) carriers create
-                                    plans and optimize network operations. The system can be used by linehaul planners,
+                                    revolutionising how less than truckload shipping (LTL) carriers create
+                                    plans and optimise network operations. The system can be used by linehaul planners,
                                     network
                                     planners, and central dispatchers to create better linehaul schedules and shipment
                                     routes.</li>
@@ -249,9 +249,9 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Chandigarh, India</span>
                             </div>
                             <ul>
-                                <li>Infosys (NYSE: INFY) is well-known MNC known for it's IT Solutions and Services, Consulting, Business Process Outsourcing, Products and Platforms, Engineering Services.</li>
+                                <li>Infosys (NYSE: INFY) is a well-known MNC known for it's IT Solutions and Services, Consulting, Business Process Outsourcing, Products and Platforms, Engineering Services.</li>
                                 <li>Enhanced Report Generation module for BASEL-3 and bug fixes.</li>
-                                <li>Worked on Data Warehousing project in which report generation is done after complex
+                                <li>Worked on Data Warehousing project in which report generation is done after a complex
                                     ETL process.</li>
                                 <li>Feature development, enhancements and maintenance for multiple projects (client:
                                     American Express): Modified Lockbox Management (MLB), Split funding (SF), Speed of
