--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                             </div>
                             <ul>
                                 <li>Walmart handles over 2.5 petabytes of data every hour, providing unparalleled scale and complexity in its backend operations that serves over 200 million customers each week,
-                                    daily deploying +100,000 lines of code, working on private, public and hybrid clouds,
+                                    daily deploying +100,000 lines of code, working on private, public and hybrid clouds.
                                 </li>
-                                <li>I work with Site Reliability Engineering and Platform Team, responsible for designing
+                                <li>I work with Site Reliability Engineering Team, responsible for designing
                                     and implementing solutions at Walmart scale for different teams.</li>
+                                <li>Crafted crucial parts of auto-scaling and anomaly-detection services.</li>
                                 <li>Developed and maintained critical parts of telemetry services that ingest and store
                                     multi-million metrics per second in petabyte volumes.</li>
-                                <li>Crafted crucial parts of auto-scaling and anomaly-detection services.</li>
-                                <li>Delivered production grade enterprise microservices that are scalable, reliable and
-                                    maintainable. </li>
                                 <li>Implemented showback modules to quantify the telemetry platform usage by different
                                     teams in terms of dollar cost.</li>
+                                <li>Delivered production grade enterprise microservices that are scalable, reliable and
+                                        maintainable. </li>
                                 <li><b>Tech-stack:</b> golang, kubernetes, GCP, Kafka, operators, SRE, Devops, prometheus,
                                     grafana, M3, Multi-cloud, DR.</li>
                             </ul>
@@ -165,12 +165,6 @@
                         <span>MAIT, GGSIPU, New Delhi</span>
                         <br>
                         <span>July, 2008 - July 2012</span>
-                    </div>
-                    <div class="item">
-                        <h2 class="item-title">M.S. in Computer Science</h2>
-                        <span>BITS Pilani, WILP</span>
-                        <br>
-                        <span>July 2016 - July 2017 <br/>(Two Semesters)</span>
                     </div>
                 </div>
 
